# fillit

./: CMakeLists.txt  Makefile  README.md  ft_border.c  ft_console.c  ft_exit_error.c  ft_fillit.c  ft_grid.c  ft_ptest.c  ft_putgrid.c  ft_putnstr.c  ft_readfile.c  ft_smart_validator.c  ft_strnew.c  ft_tetriminos.c  ft_tetro_move.c  ft_tetro_resizer.c  ft_tetro_splitter.c  ft_validator.c  libft.h  main.c  sample.fillit  shapes  text
